2010-05-01  vadim  <vadim@vk.crocodile.org>

	* CompilerDriver_ipt_policy.cpp (CompilerDriver_ipt::processPolicyRuleSet):
	fixes #1432 "automatic rule with --restore-mark is missing if
	rules using action Tag are not in the default Policy rule set".

2010-05-01  yalovoy <yalovoy@gmail.com>
	* RuleSetView.cpp: fixes #1431 GUI crash adding rules to rule group

2010-05-01  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_ipt.cpp (PolicyCompiler_ipt::insertFailoverRule):
	fixed #1411 outbound rule that permits VRRP should be added
	outside the loop to avoid duplicate rules for clusters with 3 or
	more members.

2010-04-29  Vadim Kurland  <vadim@vk.crocodile.org>

	* SSHSession.cpp (SSHSession::terminate): see #1426, #1428
	QProcess sends signal "finished()" during event processing on
	windows, added checks for that.

	* instDialog.cpp (instDialog::mainLoopInstall): disabling and
	enabling "stop" button in the compile/install dialog appropriately

2010-04-28  Vadim Kurland  <vadim@vk.crocodile.org>

	* instDialog.cpp (instDialog::show): fixes #1429 "Finish" button
	is activated during compile. Also added unit test for this.

2010-04-27  vadim  <vadim@vk.crocodile.org>

	* CompilerDriver_ipt.cpp (CompilerDriver_ipt::dumpScript): fixes #1425
	"iptables script generated for the empty rule set is broken". Compiler
	generated empty shell function for empty Policy rule set. It should
	always include at least automatic rules.

	* SSHSession.cpp (SSHSession::terminate): see #1426, #1428 use
	QProcess::waitForFinished() instead of just sleep() after we send
	TERM signal to the background process. Also let Qt process events
	to update the GUI while waiting.

	* instDialog_installer.cpp (instDialog::stopInstall): fixed #1428
	button "Stop" in the installer dialog does not stop installer
	process

	* SSHSession.cpp (terminate): fixes #1426 "segfault when cancel
	while installing" (SF bug 2990333). No need to process events in